<resources>
    <string name="app_name">MedtRonic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_file">SEND FILE</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="user_name">User Name</string>
    <string name="send_message_image">SEND MESSAGE IMAGE</string>
    <string name="message">Message</string>
    <string name="press_start_to_record">PRESS START TO RECORD</string>
    <string name="send_message_button">Send Message Button</string>
    <string name="send_audio_button">Send audio button</string>
    <string name="gallery_button">Gallery button</string>
    <string name="demo_user_name">PARVEZ AHAMMED</string>
    <string name="demo_profile_photo">Demo profile Photo</string>
    <string name="send_audio_icon">Send audio icon</string>

    <string name="delete">Delete</string>

    <string name="website_name">Website Name</string>
    <string name="audio_message">Audio Message</string>
    <string name="record_audio">Record Audio</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_password">Enter your Password</string>
</resources>