<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeTab.SendPulseActivity">


    <LinearLayout
        android:id="@+id/layoutReceiverBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView

            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:contentDescription="@string/demo_profile_photo"
            android:src="@drawable/ic_demo_profile_photo_foreground" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="18"
            android:gravity="center"
            android:text="@string/demo_user_name"
            android:textSize="20sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="471dp"
        android:layout_gravity="top"
        android:contentDescription="@string/send_message_image"
        app:srcCompat="@drawable/img_chat" />

    <LinearLayout
        android:id="@+id/layoutSenderBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/buttonSendImage"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:contentDescription="@string/gallery_button"
            android:src="@drawable/ic_gallery_foreground"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/buttonSendAudio"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"

            android:layout_weight="1"
            android:contentDescription="@string/send_audio_icon"
            android:src="@drawable/ic_mic_foreground" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"

            android:layout_weight="18">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/send_message_field"
                android:hint="@string/message"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/buttonSendMessage"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"

            android:contentDescription="@string/send_message_button"
            android:src="@drawable/icon_send_button" />


    </LinearLayout>

</LinearLayout>

