<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_create_join_class"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bg_color_light"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Audio Recording......."
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/background_btn"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/start"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/buttonStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/background_btn"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/stop"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/background_btn"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/send_file"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>
